# hhuOS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  build.sh  default.nix  flake.nix  nixify.fish  nixify_binpaths.patch  nixify_grub.patch  nixify_shebangs.patch  run.sh
.run/: qemu (BIOS KVM).run.xml  qemu (BIOS).run.xml  qemu (UEFI KVM).run.xml  qemu (UEFI).run.xml  qemu-gdb (BIOS).run.xml  qemu-gdb (UEFI).run.xml
bios/ovmf/: build.sh
cmake/: CMakeLists.txt
cmake/application/: CMakeLists.txt
cmake/application/edit/: CMakeLists.txt
cmake/application/lvgl/: CMakeLists.patch
cmake/asciimation/: CMakeLists.txt
cmake/books/: CMakeLists.txt
cmake/device/cpu/: CMakeLists.txt
cmake/device/interrupt/: CMakeLists.txt
cmake/device/time/: CMakeLists.txt
cmake/floppy0/: CMakeLists.txt
cmake/grub/: CMakeLists.txt
cmake/hdd0/: CMakeLists.txt
cmake/initrd/: CMakeLists.txt
cmake/music/: CMakeLists.txt
cmake/towboot/: CMakeLists.txt
floppy0/: build.sh
hdd0/: build.sh
loader/towboot/: build.sh
nix-patches/: CMakeLists.patch  bios-ovmf-build.patch  cmake-application-CMakeLists.patch  cmake-application-lvgl-CMakeLists.patch  cmake-application-lvgl-CMakeLists2.patch  cmake-hdd0-CMakeLists.patch  cmake-initrd-CMakeLists.patch  cmake-music-CMakeLists.patch  floppy0-build.patch  hdd0-build.patch  loader-towboot-build.patch  lvgl-CMakeLists.patch
src/: GatesOfHell.cpp
tools/: angel.beep  castlevania.beep  dance_monkey.beep  deja_vu.beep  ghostbusters.beep  harry_potter.beep  mario.beep  sonne.beep  star_wars.beep  tetris.beep
(+166 files in other folders)
